# miriondb

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  db_init.py  docker-compose.yml  requirements.txt  run.py  start.sh  test.py
composes/: docker-compose.dev.yml  docker-compose.prod.yml
migrations/versions/: 2f6bf0ad86bb_.py  bec99c291420_.py
mirion/: __init__.py  connection.py  database.py  models.py  task.py
mirion/static/css/: main.css
mirion/static/js/: autocomplete.js  events.js
mirion/templates/: 404.html  card_view.html  history.html  idol_view.html  main.html
mirion/templates/snips/: card.html  nav.html
mirion/utils/: enums.py  fetch.py  helpers.py
mirion/views/: __init__.py  card.py  main.py
theater/: Cargo.toml  README.md  Rocket.toml
theater/src/: assets.rs  listener.rs  main.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.vue  consts.ts  main.ts  models.ts
ui/src/assets/: main.css
ui/src/components/: Card.vue
ui/src/components/partials/: ArrowButton.vue  CardIcon.vue  CardsContainer.vue  DigitTextInput.vue  ItemContainer.vue  SearchBar.vue
ui/src/router/: index.ts
ui/src/views/: CardView.vue  HistoryView.vue  HomeView.vue  IdolView.vue  NotFoundView.vue
