[package]
name = "theater"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.1", features=["json"] }
serde_yaml = "0.8"
reqwest = "0.11"
tokio = { version="1.0", features=["fs"]}
postgres = "0.19.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["postgres_pool"]
