[package]
name = "theater"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
hyper = "0.14.12"
openssl = "0.10.48"
postgres = "0.19.1"
rocket = { version="0.5.0-rc.3", features=["json"] }
remove_dir_all = "0.8.0"
reqwest = "0.11"
serde_yaml = "0.8.18"
tokio = "1.18.5"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["postgres_pool"]
